--- a/main.css
+++ b/main.css
@@ -12,13 +12,13 @@ body {
 	color: black;
 	text-align: center;
 	margin-top: 15px;
-	padding-top: 30px;
+	padding-top: 36px;
 	padding-bottom: 20px;
 	height: 50%;
 }
 
 #head h1 {
-	font-family: "Arial Narrow", sans-serif;
+	font-family: 'Pontano Sans', sans-serif;
 	font-size: 45px;
 	font-weight: bold;
 }
@@ -34,13 +34,13 @@ body {
 	background-color: white;
 	opacity: 0.7;
 	font-size: 14px;
-	font-family: "Arial Narrow", sans-serif;
+	font-family: 'Pontano Sans', sans-serif;
 }
 
 #q-and-a {
 	padding-top: 40px;
 	text-align: center;
-	font-family: "Arial Narrow", sans-serif;;
+	font-family: 'Pontano Sans', sans-serif;
 	color: black;
 }
 
@@ -57,15 +57,19 @@ body {
 	padding-bottom: 5px;
 }
 
+#numCorrect, #five {
+	font-size: 20px;
+}
+
 #afterSubmit {
 	color: black;
-	font-family: "Arial Narrow", sans-serif;;
+	font-family: 'Pontano Sans', sans-serif;
 	text-align: center;
 	margin-top: 50px;
 }
 
 .end-result {
-	font-size: 20px;
+	font-size: 34px;
 	padding-top: 45px;
 }
 
